new update and deploy script

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "spectacle-boilerplate",
+  "name": "Js Sessions",
   "version": "1.0.1",
   "description": "ReactJS Powered Presentation Framework",
   "main": "lib/index.js",
+  "homepage": "http://dhawalmehta.github.io/",
   "scripts": {
     "clean": "rimraf dist",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js",
     "lint": "eslint --ext .js,.jsx .",
-    "deploy": "npm run clean & npm run build && surge -p .",
+    "predeploy": "npm run clean & npm run build && surge -p .",
+    "deploy": "gh-pages -d build",
     "export": "spectacle-renderer --delay 3000",
     "start": "cross-env NODE_ENV=development node server.js"
   },
