--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Js Sessions",
+  "name": "JsSessions",
   "version": "1.0.1",
   "description": "ReactJS Powered Presentation Framework",
   "main": "lib/index.js",
@@ -9,7 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js",
     "lint": "eslint --ext .js,.jsx .",
     "predeploy": "npm run clean & npm run build && surge -p .",
-    "deploy": "gh-pages -d build",
+    "upload": "gh-pages -d build",
     "export": "spectacle-renderer --delay 3000",
     "start": "cross-env NODE_ENV=development node server.js"
   },
